--- a/src/styles/GeneratedCV.css
+++ b/src/styles/GeneratedCV.css
@@ -1,7 +1,7 @@
 .gcv-page {
   background-color: white;
   height: 100%;
-  width: 80%;
+  aspect-ratio: 1 / 1.3;
   margin: auto;
   color: black;
 }
