--- a/src/styles/GeneratedCV.css
+++ b/src/styles/GeneratedCV.css
@@ -1,20 +1,31 @@
 .gcv-page {
+  padding: 50px;
   background-color: white;
   height: 100%;
-  aspect-ratio: 1 / 1.3;
+  width: 1000px;
+
   margin: auto;
   color: black;
+
+  .heading {
+    text-align: center;
+  }
+
+  .name {
+    font-size: 3rem;
+  }
+
+  .contact {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  hr {
+    border: 1px solid black;
+  }
 }
 
-.gcv-name {
-  font-size: 3rem;
-  width: 100%;
-  text-align: center;
-  padding: 20px 0;
-}
-
-.gcv-contact {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+.gcv-page > * {
+  margin-bottom: 20px;
 }
