--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
   --text: rgb(215, 215, 215);
   --dark: #202020;
   --base: #2e2e2e;
+  --highlight: #5a5a5a;
 
   --large: 2rem;
 }
@@ -67,6 +68,42 @@ h6 {
   text-wrap: balance;
 }
 
+hr {
+  border: 1px solid var(--base);
+}
+
+textarea {
+  resize: none;
+  background-color: var(--base);
+  border: none;
+  font-family: inherit;
+  color: inherit;
+  padding: 10px;
+  width: 100%;
+  height: 15rem;
+  transition: outline 0.2s;
+  outline: 1px solid transparent;
+}
+
+textarea:focus {
+  outline: 1px solid var(--highlight);
+}
+
+input {
+  background-color: var(--base);
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  padding: 10px;
+  width: 100%;
+  transition: outline 0.2s;
+  outline: 1px solid transparent;
+}
+
+input:focus {
+  outline: 1px solid var(--highlight);
+}
+
 #root,
 #__next {
   isolation: isolate;
@@ -77,19 +114,6 @@ h1 {
   font-size: var(--large);
 }
 
-input {
-  background-color: var(--base);
-  border: none;
-  color: inherit;
-  font-family: inherit;
-  padding: 10px;
-  width: 100%;
-}
-
-input:focus {
-  outline: none;
-}
-
 .sidebar {
   background: var(--dark);
   outline: 1px solid var(--base);
@@ -98,7 +122,7 @@ input:focus {
   padding: 20px;
   margin: 20px;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-auto-rows: min-content;
   gap: 20px;
 }
 
