Add collapsable input sections

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,8 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  user-drag: none;
+  -webkit-user-drag: none;
 }
 
 input,
@@ -148,7 +150,7 @@ h1 {
   display: grid;
   grid-auto-rows: min-content;
   gap: 20px;
-  overflow-y: auto;
+  overflow-y: scroll;
   scrollbar-color: var(--highlight) var(--base);
   scrollbar-width: thin;
 
